# cater-film

./: .gitignore  Makefile  README.md
Film/Film/: AppDelegate.swift  ContentView.swift  FilmApp.swift  Info.plist  SceneDelegate.swift  ViewController.swift  bridging-header.h  exports.h
Film/Film.xcodeproj/: project.pbxproj
Film/Film.xcodeproj/project.xcworkspace/xcuserdata/smilesir.xcuserdatad/: UserInterfaceState.xcuserstate
Film/Film.xcodeproj/xcshareddata/xcschemes/: Film.xcscheme
Film/Film.xcodeproj/xcuserdata/smilesir.xcuserdatad/xcschemes/: xcschememanagement.plist
Film/Film/Assets.xcassets/Back.imageset/: Contents.json
Film/Film/Assets.xcassets/test.imageset/: Contents.json
Film/Film/Base.lproj/: Main.storyboard
Film/Film/controllers/: BaseViewController.swift  CustomViewController.swift  DelegateViewController.swift  SettingViewController.swift
Film/Film/controllers/detail/: DetailViewController.swift
Film/Film/models/: Request.swift
Film/Film/network/: NetworkManager.swift
Film/Film/views/: ContentView.swift  MainView.swift  SettingContentView.swift
Film/Film/webViews/: MainView.swift  SettingView.swift
app/: package.json
app/src-tauri/: Cargo.toml  conf.toml  tauri.conf.json
app/src-tauri/src/: error.rs  lib.rs  process.rs
app/src-tauri/src/config/: mod.rs
app/src-tauri/src/home/: mod.rs
app/src-tauri/src/prepare/: mod.rs  request.rs
app/src-tauri/src/process/: mod.rs
app/src-tauri/src/rank/: mod.rs
app/src-tauri/src/utils/: mod.rs
backend/: Cargo.toml
backend/src/: exports.h  exports.rs  lib.rs
backend/src/config/: mod.rs
backend/src/home/: mod.rs
backend/src/prepare/: mod.rs  request.rs
backend/src/process/: mod.rs
backend/src/rank/: mod.rs
backend/src/utils/: file.rs  mod.rs
web/: .env.local  .env.prod  package.json
web/public/: index.html
web/scripts/: build.js
web/src/@types/: constant.d.ts
web/src/assets/styles/common/: antd.less  common.less  loading.less  main.less  reset.less
web/src/assets/styles/pages/: detail.less  (+2 more)
web/src/communal/: layout.tsx
web/src/communal/config/: constant.toml  system.toml
web/src/route/: router.tsx  router.url.toml
web/src/views/stores/: config.tsx
(+44 files in other folders)
