[package]
name = "backend"
version = "0.1.0"
description = "film backend"
authors = ["poohlaha"]
license = "MIT/Apache-2.0"
repository = "https://github.com/poohlaha/cater-film"
keywords = ["film", "cater", "movie"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
toml = "0.8"
log = "0.4"
async-trait = "0.1"
futures = { version = "0.3", default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
request-http = "0.1"
base64 = "0.21"
serde_json = "1.0"
lazy_static = "1.4"
tauri = { version = "2.0.0-alpha", features = [] }
tokio = "1.35.1"

[lib]
name = "backend"
crate-type = ["staticlib", "cdylib"]

# 启用 LTO
[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols