[package]
name = "app"
version = "1.0.0"
description = "film"
authors = ["poohlaha"]
license = "MIT/Apache-2.0"
repository = "https://github.com/poohlaha/cater-film"
keywords = ["film", "cater", "movie"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
thiserror = "1.0"
toml = "0.8"
log = "0.4"
async-trait = "0.1"
futures = { version = "0.3", default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
tauri = { version = "2.0.0-alpha", features = [] }
tauri-plugin-window = "2.0.0-alpha"
tauri-plugin-shell = "2.0.0-alpha"
tauri-plugin-log = "2.0.0-alpha"
request-http = "0.1"
serde_json = "1.0"
lazy_static = "1.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
